<resources>
    <string name="page_title">Organizer</string>
    <string name="search_page">Search</string>
    <string name="setting_page">Setting</string>
    <string name="item1">Now</string>
    <string name="item2">Add</string>
    <string name="item3">Settings</string>
    <string-array name="notif">
        <item>At moment</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>No</item>
    </string-array>
    <string-array name="repeating_in">
        <item>No</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="app_name">Organizer</string>
    <string name="cancel">Cancel</string>
    <string name="CrTitle">Title</string>
    <string name="allday">During the day</string>
    <string name="timeb">Initial time</string>
    <string name="timee">End time</string>
    <string name="paral">Cancel other events</string>
    <string name="date">Date</string>
    <string name="schedule">is scheduled for</string>
    <string name="timenotif">Notify:</string>
    <string name="repeate">Repeating</string>
    <string name="description">Description</string>
    <string name="parall">Other events\n in this time?</string>
    <string name="resetFills">Wipe history</string>
    <string name="Stheme">System</string>
    <string name="Ltheme">Light</string>
    <string name="Dtheme">Dark</string>
    <string name="editing">Editing</string>
    <string name="deleting">Deleting</string>
    <string name="wipe">Wipe</string>
    <string name="service_desc">autostart</string>
    <string name="cardnotif">\"Notify:    \"</string>
    <string name="Repeatcard">\"Repeating: \"</string>
    <string name="Themes">Theme</string>
    <string name="lang">Language</string>
    <string name="catname">Category</string>
    <string name="deleteev">Deleting event</string>
    <string name="deleteevbody">Do you want to delete the event? This action cannot be undone.</string>
    <string name="ru">Русский</string>
    <string name="en">English</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nPlane your day with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="name">Write your name</string>
    <string name="email">Wrong email</string>
    <string name="inppass">Write passwort</string>
    <string name="notequalpass">Passwords aren`t equal</string>
    <string name="loginbtn">Login</string>
    <string name="regbtn">Register</string>
    <string name="passshort">Password too short</string>
    <string name="forgotpass">Are you forgot password?</string>
    <string name="Hello">Hello</string>
    <string name="accexist">Email is already used</string>
    <string name="checkemail">, please, check email</string>
    <string name="verify">Please, verify email</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>