<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBarLayoutSt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarSt"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/setting_page"
            app:navigationIcon="@drawable/ic_arrow_back_24dp">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>
<GridLayout
    app:layout_constraintTop_toBottomOf="@+id/appBarLayoutSt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:textSize="18sp"
        android:hint="@string/Themes"
        android:layout_marginTop="10dp"/>


    <RadioGroup
        android:id="@+id/themeRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:orientation="vertical"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/systemThemeRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_rb_icon"
            android:layoutDirection="rtl"
            android:text="@string/Stheme"
            style="@style/Widget.App.RadioButton"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lightThemeRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_rb_icon"
            android:layoutDirection="rtl"
            android:text="@string/Ltheme"
            style="@style/Widget.App.RadioButton"
/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/darkThemeRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_rb_icon"
            android:layoutDirection="rtl"
            android:text="@string/Dtheme"
            style="@style/Widget.App.RadioButton"/>
    </RadioGroup>



    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:textSize="18sp"
        android:hint="@string/lang"
        android:layout_marginTop="10dp"/>


    <RadioGroup
        android:id="@+id/langRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:orientation="vertical"
        >

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/EN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/custom_rb_icon"
        android:layoutDirection="rtl"
        android:text="@string/en"
        style="@style/Widget.App.RadioButton"
        />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/RU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/custom_rb_icon"
        android:layoutDirection="rtl"
        android:text="@string/ru"
        style="@style/Widget.App.RadioButton"
        />
    </RadioGroup>
    <Button
        android:id="@+id/wipeFills"
        style="@style/EventButton"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/resetFills" />
    <Button
        android:id="@+id/signout"
        style="@style/EventButton"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="signout" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>