<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout1"
    android:layout_height="fill_parent">

    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBarLayoutD1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarD1"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/toolbar_d1"
            app:title="@string/page_title"
            app:navigationIcon="@drawable/ic_close_24">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>
<ScrollView
    app:layout_constraintLeft_toLeftOf="parent"
    android:id="@+id/scrollviewd1"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayoutD1"
    app:layout_constraintBottom_toBottomOf="parent">

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_height="48dp"
            android:layout_gravity="fill"
            android:autofillHints="title"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:hint="@string/CrTitle"
            android:textSize="18sp"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:background="@drawable/edittextstyle"
            android:padding="10dp"
            android:maxLines="1"
            android:singleLine="true">

        </com.google.android.material.textfield.MaterialAutoCompleteTextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:gravity="center_vertical"
            android:text="@string/allday"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="end"

            android:thumb="@drawable/thumb_selector"
            app:track="@drawable/track_selector" />

        <Button
            android:id="@+id/btn1"
            style="@style/EventButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/timeb" />

        <Button
            android:id="@+id/btn2"
            style="@style/EventButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/timee" />

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#A1A1A1"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <Button
            android:id="@+id/imb3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="5"
            android:layout_gravity="fill"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:gravity="start"
            style="@style/EventButton"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:text="@string/timenotif"
            android:textSize="18sp"
            android:layout_marginTop="10dp"

            />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_height="56dp"
            android:layout_width="160dp"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="fill_vertical|right"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/notifybefore"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:inputType="none"
                android:scrollbarSize="0dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_gravity="fill_vertical"
            android:text="@string/repeate"
            android:textSize="18sp"
            android:layout_marginTop="26dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_height="56dp"
            android:layout_width="160dp"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_gravity="fill_vertical|right"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/repeating"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:inputType="none"
                android:scrollbarSize="0dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_marginTop="20dp"
            android:text="@string/parall"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/paralsw"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:thumb="@drawable/thumb_selector"
            app:track="@drawable/track_selector" />

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#A1A1A1"
            android:layout_row="11"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <EditText
            android:id="@+id/edtxt2"
            android:layout_width="wrap_content"
            android:minHeight="48dp"
            android:layout_height="fill_parent"
            android:layout_row="12"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edittextstyle" />




    </GridLayout>

</ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>